--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
@@ -41,7 +42,7 @@
     "jest-config": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
-    "react-native-svg-transformer": "^1.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
