--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^2.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-safe-area-context": "4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
